# polis-recognizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: roadmap-known-limitations.md  roadmap-policyholder.md
examples/: basic_usage.py
polis_recognizer/: __init__.py  contract_field_extractor.py  exceptions.py  extractor.py  hybrid_ingestion.py  image_preprocessing.py  ocr_config.py  ocr_service.py  pdf_extraction_router.py  pdfplumber_ingestion.py  policy_ingestion.py
polis_recognizer/extraction/: __init__.py  candidates.py  dates.py  layout.py  negation.py  normalizer.py  numeric.py  pipeline.py  policyholder_block.py  ranker.py  tables.py  validators.py
polis_recognizer/extraction/parsers/: __init__.py  base.py  franchise.py  limit.py  policy_number.py  policy_period.py  policyholder_address.py  policyholder_birth_date.py  policyholder_emails.py  policyholder_inn.py  policyholder_kpp.py  policyholder_name.py  policyholder_ogrn.py  policyholder_passport.py  policyholder_phones.py  policyholder_postal_code.py  policyholder_type.py  premium.py  repair_mode.py  sum_type.py
tests/: test_components.py  test_corpus_regressions_v031.py  test_corpus_regressions_v032.py  test_corpus_regressions_v033.py  test_corpus_regressions_v034.py  test_hybrid_ingestion.py  test_pipeline.py  test_policy_number.py  test_policyholder_address.py  test_policyholder_birth_date.py  test_policyholder_block.py  test_policyholder_emails.py  test_policyholder_inn.py  test_policyholder_kpp.py  test_policyholder_name.py  test_policyholder_ogrn.py  test_policyholder_passport.py  test_policyholder_phones.py  test_policyholder_pii.py  test_policyholder_postal_code.py  test_policyholder_skeleton.py  test_policyholder_type.py  test_validators.py
