[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "polis-recognizer"
version = "0.3.1"
description = "Russian KASKO insurance policy field extractor — pulls structured fields (policy terms + policyholder + contacts) from PDF policies via text-layer, tables, and OCR fallback."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Grigorii Grachev", email = "grigorii@example.com" },
]
keywords = [
    "insurance",
    "policy",
    "kasko",
    "ocr",
    "pdf",
    "extraction",
    "russian",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Natural Language :: Russian",
]
dependencies = [
    # pypdf >=6.10.2 — closes the 5.x CVE backlog (StreamObject DoS
    # family, infinite-loop in CrossRef parser, several text-extraction
    # crashes in pdf-cmaps). 6.x removed deprecated PyPDF2 shims;
    # this package only uses PdfReader + page.extract_text(), both
    # stable across 5.x → 6.x.
    "pypdf>=6.10.2,<7",
    "pdfplumber>=0.11.0,<1",
    "pytesseract>=0.3.10,<1",
    # Pillow >=12.2.0 — closes 4 CVEs vs. the 11.x line (decoder OOB
    # writes in MPO/JPEG-2000, integer overflow in ImageOps). 12.x
    # removed already-deprecated APIs; only PIL.Image basics are used
    # here (open / save / convert / fromarray), unaffected by the bump.
    "Pillow>=12.2.0,<13",
    "pdf2image>=1.16,<2",
    "opencv-python-headless>=4.8,<5",
]

[project.urls]
Homepage = "https://github.com/grigra27/polis-recognizer"
Repository = "https://github.com/grigra27/polis-recognizer"
Issues = "https://github.com/grigra27/polis-recognizer/issues"
Changelog = "https://github.com/grigra27/polis-recognizer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "reportlab>=4.0",  # synthetic PDF fixtures
]
dev = [
    "polis-recognizer[test]",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["polis_recognizer"]

[tool.hatch.build.targets.sdist]
include = [
    "/polis_recognizer",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    # pytesseract emits a DeprecationWarning on Python 3.12 about
    # `pkg_resources` — unrelated to our code, suppress.
    "ignore::DeprecationWarning:pytesseract",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
